kubernetes/zero-service-app.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: g-zero-service
  name: g-zero-service
  namespace: zero-dev
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8484
  selector:
    run: g-zero-deployment
  type: NodePort
