kubernetes/zero-service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: g-zero-service-ingress
  name: g-zero-service-ingress
  namespace: zero-dev
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"ports": {"80":"zero-backend"}}'
spec:
  type: NodePort
  selector:
    run: g-zero-deployment-ingress
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8484
