kubernetes/zero-service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    #cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/load-balancer-type: Internal
  labels:
    app: zero-nginx
    resource: nodeport
    type: service
  name: zero-nginx-service
  namespace: zero-nginx
spec:
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: zero-nginx
    resource: pods
    type: deployment
  type: LoadBalancer
  #type: NodePort
